// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteButtons renders the DeleteAlbumButton component 1`] = `
<button
  onClick={undefined}
>
  Delete album
</button>
`;

exports[`DeleteButtons renders the DeleteImageButton component 1`] = `
<button
  onClick={undefined}
>
  Delete
</button>
`;
